--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                                 </span>
                                         </div>
                                         <div class="col-md-7 colonneDeLabel">
-                                            <p><a href="#">Pourquoi indiquer ma date<br> de naissance ?</a></p>
+                                            <p id="date"><a href="#">Pourquoi indiquer ma date<br> de naissance ?</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -143,7 +143,7 @@
                                 <button id="btn" type="button" class="btn btn-success">Inscription</button> 
                                 <br/>
                                 </a>
-                                <p><a href="#">Créer une Page</a> pour une célébrité, un groupe ou une entreprise</p>
+                                <p id="petit"><strong><a href="#">Créer une Page</a> pour une célébrité, un groupe ou une entreprise</strong></p>
                             </div>
                         </div>
                         <!--  fin du content du droite-->
