--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Facebook</title>
+        <title>Facebook - Connexion ou inscription</title>
         <link rel="shortcut icon" type="image/x-icon" href="dossierImage/logofb.png" />
         <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="index.css">
