--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                             <div class="row">
             
                                 <div class="col-md-4 avecMargeLeft">
-                                    <label>Adresse e-mail ou mobile</label>
+                                    <label id="labelhead">Adresse e-mail ou mobile</label>
                                     <input type="text" class="headInput"/>
                                 </div> 
                                 <div class="col-md-4 sansMargeLeft">
-                                    <label>Mot de passe</label>
+                                    <label id="labelhead">Mot de passe</label>
                                     <input type="password" class="headInput"/>
                                     <br/>
                                     <p class="aColore" >Informations de compte oubliées ?</p>
